--- a/index.html
+++ b/index.html
@@ -28,15 +28,21 @@
 
 <ul>
 <li>
-<a href="http://projects.niute.ch/">Open source projects search</a> - including GitHub, GitLab, Sourceforge, Launchpad, etc.</li>
+<a href="https://niutech.github.io/amp-mui/">AMP MUI</a> - AMP CSS framework</li>
 <li>
-<a href="http://webdesign.niute.ch/">Web design search</a> - including Smashing Magazine, Tuts+, Speckyboy, DesignM.ag, etc.</li>
+<a href="https://niutech.github.io/amp-spectre/">AMP Spectre</a> - AMP CSS framework</li>
+<li>
+<a href="https://niutech.github.io/amp-surface/">AMP Surface</a> - AMP CSS framework</li>
 <li>
 <a href="https://swiftlang.eu/">SwiftLang</a> - Apple Swift language resource center &amp; community</li>
 <li>
 <a href="https://github.com/niutech/node.php">Node.php</a> - run node.js from PHP on a shared hosting</li>
 <li>
 <a href="http://htmlpreview.github.io/">HTMLPreview</a> - preview HTML files from GitHub or Bitbucket</li>
+<li>
+<a href="https://github.com/niutech/ssid-ticker">SSID Ticker</a> - show sparkline of any numerical JSON data in SSID</li>
+<li>
+<a href="https://github.com/niutech/grapesjs-desktop">GrapeJS Dekstop</a> - desktop WYSIWYG web builder based on GrapesJS</li>
 <li>
 <a href="http://niutech.github.io/voicepedia/">VoicePedia</a> - a voice-enabled audio-visual encyclopedia, like Qwiki</li>
 <li>
