--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li>
 <a href="https://github.com/niutech/ssid-ticker">SSID Ticker</a> - show sparkline of any numerical JSON data in SSID</li>
 <li>
-<a href="https://github.com/niutech/grapesjs-desktop">GrapeJS Dekstop</a> - desktop WYSIWYG web builder based on GrapesJS</li>
+<a href="https://github.com/niutech/grapesjs-desktop">GrapesJS Desktop</a> - desktop WYSIWYG web builder based on GrapesJS</li>
 <li>
 <a href="http://niutech.github.io/voicepedia/">VoicePedia</a> - a voice-enabled audio-visual encyclopedia, like Qwiki</li>
 <li>
